更新 call-build.yml 中的工作名称以使用 android-version 输入参数

--- a/.github/workflows/call-build.yml
+++ b/.github/workflows/call-build.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   uboot:
-    name: ${{ matrix.workflows_inputs.device_branch }}
+    name: ${{ matrix.workflows_inputs.android-version }}
     uses: ./.github/workflows/lineageos-dev.yml
     strategy:
       fail-fast: false
