--- a/.github/workflows/call-build.yml
+++ b/.github/workflows/call-build.yml
@@ -19,11 +19,12 @@ jobs:
       matrix:
         runner_image: ["ubuntu-24.04"]
         workflows_inputs:
+          # https://wiki.lineageos.org/emulator
           - manifest-repo: "https://github.com/LineageOS/android.git"
             manifest-branch: "lineage-18.1"
             android-version: "ginkgo"
           - manifest-repo: "https://github.com/LineageOS/android.git"
-            manifest-branch: "cm-14.1"
+            manifest-branch: "lineage-18.1"
             android-version: "x86_64"
           - manifest-repo: "https://github.com/LineageOS/android.git"
             manifest-branch: "cm-14.1"
