--- a/.github/workflows/lineageos-dev.yml
+++ b/.github/workflows/lineageos-dev.yml
@@ -549,35 +549,38 @@ jobs:
           echo "===== source build/envsetup.sh ====="
           source build/envsetup.sh
 
-          echo "===== breakfast ${{ env.android-version }} ====="
-          set +e
-          breakfast ${{ env.android-version }}
-          # ls -lh
-          # ls -lh ./vendor/
-          # ls -lh ./device/
-          # ls -lh ./device/xiaomi/
-          # ls -lh ./device/xiaomi/sm6125-common/
+          # echo "===== breakfast ${{ env.android-version }} ====="
+          # set +e
+          # breakfast ${{ env.android-version }}
+          # # ls -lh
+          # # ls -lh ./vendor/
+          # # ls -lh ./device/
+          # # ls -lh ./device/xiaomi/
+          # # ls -lh ./device/xiaomi/sm6125-common/
 
-          # echo "===== ./device/xiaomi/sm6125-common/setup-makefiles.sh ====="
-          # cat ./device/xiaomi/sm6125-common/setup-makefiles.sh
+          # # echo "===== ./device/xiaomi/sm6125-common/setup-makefiles.sh ====="
+          # # cat ./device/xiaomi/sm6125-common/setup-makefiles.sh
 
-          # export DEVICE_COMMON=sm6125-common
-          # export DEVICE=ginkgo
-          # export VENDOR=xiaomi
-          # source ./device/xiaomi/sm6125-common/setup-makefiles.sh
+          # # export DEVICE_COMMON=sm6125-common
+          # # export DEVICE=ginkgo
+          # # export VENDOR=xiaomi
+          # # source ./device/xiaomi/sm6125-common/setup-makefiles.sh
 
-          # echo "===== ./vendor/xiaomi/sm6125-common/sm6125-common-vendor.mk ====="
-          # cat ./vendor/xiaomi/sm6125-common/sm6125-common-vendor.mk
-          # echo "===== ./vendor/xiaomi/sm6125-common/Android.mk ====="
-          # cat ./vendor/xiaomi/sm6125-common/Android.mk
-          set -e
+          # # echo "===== ./vendor/xiaomi/sm6125-common/sm6125-common-vendor.mk ====="
+          # # cat ./vendor/xiaomi/sm6125-common/sm6125-common-vendor.mk
+          # # echo "===== ./vendor/xiaomi/sm6125-common/Android.mk ====="
+          # # cat ./vendor/xiaomi/sm6125-common/Android.mk
+          # set -e
 
-          breakfast ${{ env.android-version }}
+          # userdebug, user, eng
+          breakfast ${{ env.android-version }} eng
 
-          echo "===== croot ====="
-          croot
-          echo "===== brunch ${{ env.android-version }} ====="
-          brunch ${{ env.android-version }}
+          # echo "===== croot ====="
+          # croot
+          # echo "===== brunch ${{ env.android-version }} ====="
+          # brunch ${{ env.android-version }}
+
+          mka
 
           echo "Build completed"
 
