--- a/.github/workflows/call-build.yml
+++ b/.github/workflows/call-build.yml
@@ -25,10 +25,13 @@ jobs:
             android-version: "ginkgo"
           - manifest-repo: "https://github.com/LineageOS/android.git"
             manifest-branch: "lineage-18.1"
-            android-version: "x86_64"
+            android-version: "android_x86-eng"
           - manifest-repo: "https://github.com/LineageOS/android.git"
             manifest-branch: "cm-14.1"
-            android-version: "x86"
+            android-version: "android_x86-eng"
+          - manifest-repo: "https://github.com/LineageOS/android.git"
+            manifest-branch: "cm-14.1"
+            android-version: "android_x86_64-eng"
     with:
       runner_image: ${{ matrix.runner_image }}
       manifest-repo: ${{ matrix.workflows_inputs.manifest-repo }}
