更新 call-build.yml 中的 Android 版本配置，将 x86 和 x86_64 版本的 android-version 修改为更准确的名称

--- a/.github/workflows/call-build.yml
+++ b/.github/workflows/call-build.yml
@@ -25,13 +25,13 @@ jobs:
             android-version: "ginkgo"
           - manifest-repo: "https://github.com/LineageOS/android.git"
             manifest-branch: "lineage-18.1"
-            android-version: "android_x86-eng"
+            android-version: "android_x86"
           - manifest-repo: "https://github.com/LineageOS/android.git"
             manifest-branch: "cm-14.1"
-            android-version: "android_x86-eng"
+            android-version: "android_x86"
           - manifest-repo: "https://github.com/LineageOS/android.git"
             manifest-branch: "cm-14.1"
-            android-version: "android_x86_64-eng"
+            android-version: "android_x86_64"
     with:
       runner_image: ${{ matrix.runner_image }}
       manifest-repo: ${{ matrix.workflows_inputs.manifest-repo }}
