--- a/.github/workflows/lineageos-dev.yml
+++ b/.github/workflows/lineageos-dev.yml
@@ -59,7 +59,7 @@ env:
 
 jobs:
   build:
-    name: Build LineageOS
+    name: Build LineageOS - ${{ inputs.manifest-branch }}
     runs-on: ${{ inputs.runner_image || 'ubuntu-latest' }}
     env:
       path_build: "/android/lineage"
