--- a/.github/workflows/lineageos-dev.yml
+++ b/.github/workflows/lineageos-dev.yml
@@ -299,7 +299,7 @@ jobs:
             "pngcrush"
             # "vim"
             "xmlstarlet"
-            "libncurses5"
+            "ncurses"
           )
           sudo -E apt-get -y -qq update
           sudo -E apt-get -y -qq install "${packages_slim[@]}"
