更新 lineageos-dev.yml，将 ncurses 替换为 libncurses-dev 作为依赖项

--- a/.github/workflows/lineageos-dev.yml
+++ b/.github/workflows/lineageos-dev.yml
@@ -299,7 +299,8 @@ jobs:
             "pngcrush"
             # "vim"
             "xmlstarlet"
-            "ncurses"
+            # "ncurses"
+            "libncurses-dev"
           )
           sudo -E apt-get -y -qq update
           sudo -E apt-get -y -qq install "${packages_slim[@]}"
