更新 call-build.yml，将 Android 版本从 ginkgo 修改为 merlinx，并注释掉冗余的 brunch 命令

--- a/.github/workflows/call-build.yml
+++ b/.github/workflows/call-build.yml
@@ -20,9 +20,12 @@ jobs:
         runner_image: ["ubuntu-24.04"]
         workflows_inputs:
           # https://wiki.lineageos.org/emulator
+          # - manifest-repo: "https://github.com/LineageOS/android.git"
+          #   manifest-branch: "lineage-18.1"
+          #   android-version: "ginkgo"
           - manifest-repo: "https://github.com/LineageOS/android.git"
             manifest-branch: "lineage-18.1"
-            android-version: "ginkgo"
+            android-version: "merlinx"
           - manifest-repo: "https://github.com/LineageOS/android.git"
             manifest-branch: "lineage-18.1"
             android-version: "x86"
