--- a/.github/workflows/call-build.yml
+++ b/.github/workflows/call-build.yml
@@ -25,7 +25,7 @@ jobs:
           #   android-version: "ginkgo"
           - manifest-repo: "https://github.com/LineageOS/android.git"
             manifest-branch: "lineage-18.1"
-            android-version: "merlinx"
+            android-version: "miatoll"
           - manifest-repo: "https://github.com/LineageOS/android.git"
             manifest-branch: "lineage-18.1"
             android-version: "x86"
