--- a/.github/workflows/call-build.yml
+++ b/.github/workflows/call-build.yml
@@ -37,7 +37,7 @@ jobs:
             android-version: "x86"
           - manifest-repo: "https://github.com/LineageOS/android.git"
             manifest-branch: "cm-14.1"
-            android-version: "x86"
+            android-version: "generic_x86"
     with:
       runner_image: ${{ matrix.runner_image }}
       manifest-repo: ${{ matrix.workflows_inputs.manifest-repo }}
