更新 call-build.yml，修改 Android 版本为 flame 和 aosp_x86，调整 lineageos-dev.yml 中 lunch 命令的参数格式

--- a/.github/workflows/call-build.yml
+++ b/.github/workflows/call-build.yml
@@ -25,19 +25,19 @@ jobs:
           #   android-version: "ginkgo"
           - manifest-repo: "https://github.com/LineageOS/android.git"
             manifest-branch: "lineage-18.1"
-            android-version: "miatoll"
+            android-version: "flame"
           - manifest-repo: "https://github.com/LineageOS/android.git"
             manifest-branch: "lineage-18.1"
             android-version: "x86"
           - manifest-repo: "https://github.com/LineageOS/android.git"
             manifest-branch: "lineage-18.1"
-            android-version: "x86_64"
+            android-version: "aosp_x86"
           - manifest-repo: "https://github.com/LineageOS/android.git"
             manifest-branch: "cm-14.1"
             android-version: "x86"
           - manifest-repo: "https://github.com/LineageOS/android.git"
             manifest-branch: "cm-14.1"
-            android-version: "generic_x86"
+            android-version: "aosp_x86"
     with:
       runner_image: ${{ matrix.runner_image }}
       manifest-repo: ${{ matrix.workflows_inputs.manifest-repo }}
