--- a/.github/workflows/lineageos-dev.yml
+++ b/.github/workflows/lineageos-dev.yml
@@ -614,7 +614,7 @@ jobs:
           # breakfast ${{ env.android-version }} eng
 
           # 或者使用 lunch 设置构建环境
-          lunch ${{ env.android-version }} eng
+          lunch ${{ env.android-version }}-eng
 
           使用 mka 构建特定目标
           mka recoveryimage
