--- a/.github/workflows/lineageos-dev.yml
+++ b/.github/workflows/lineageos-dev.yml
@@ -587,7 +587,9 @@ jobs:
           echo "===== source build/envsetup.sh ====="
           source build/envsetup.sh
           echo "===== Lunch menu ====="
+          set +e
           lunch
+          set -e
 
           # 使用 breakfast 设置构建环境
           echo "===== breakfast ${{ env.android-version }} ====="
@@ -595,7 +597,7 @@ jobs:
 
           # 或者使用 lunch 设置构建环境
           echo "===== lunch ${{ env.android-version }} ====="
-          lunch ${{ env.android-version }} eng
+          lunch ${{ env.android-version }}-eng
 
           # 使用 mka 构建特定目标
           mka recoveryimage
