--- a/.github/workflows/call-build.yml
+++ b/.github/workflows/call-build.yml
@@ -31,13 +31,13 @@ jobs:
             android-version: "x86"
           - manifest-repo: "https://github.com/LineageOS/android.git"
             manifest-branch: "lineage-18.1"
-            android-version: "aosp_x86"
+            android-version: "x86"
           - manifest-repo: "https://github.com/LineageOS/android.git"
             manifest-branch: "cm-14.1"
             android-version: "x86"
           - manifest-repo: "https://github.com/LineageOS/android.git"
             manifest-branch: "cm-14.1"
-            android-version: "aosp_x86"
+            android-version: "x86"
     with:
       runner_image: ${{ matrix.runner_image }}
       manifest-repo: ${{ matrix.workflows_inputs.manifest-repo }}
