--- a/.github/workflows/lineageos-dev.yml
+++ b/.github/workflows/lineageos-dev.yml
@@ -593,6 +593,8 @@ jobs:
           lunch
           echo "----- breakfast menu -----"
           breakfast
+          echo "----- brunch menu -----"
+          brunch
           set -e
 
           # 使用 lunch 设置构建环境
