更新 call-build.yml 和 lineageos-dev.yml，将 android-version 参数更改为 device_code，以统一命名规范

--- a/.github/workflows/call-build.yml
+++ b/.github/workflows/call-build.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   uboot:
-    name: ${{ matrix.workflows_inputs.android-version }}
+    name: ${{ matrix.workflows_inputs.device_code }}
     uses: ./.github/workflows/lineageos-dev.yml
     strategy:
       fail-fast: false
@@ -22,21 +22,21 @@ jobs:
           # https://wiki.lineageos.org/emulator
           # - manifest-repo: "https://github.com/LineageOS/android.git"
           #   manifest-branch: "lineage-18.1"
-          #   android-version: "ginkgo"
+          #   device_code: "ginkgo"
           - manifest-repo: "https://github.com/LineageOS/android.git"
             manifest-branch: "lineage-18.1"
-            android-version: "flame"
+            device_code: "flame"
           - manifest-repo: "https://github.com/LineageOS/android.git"
             manifest-branch: "lineage-17.1"
-            android-version: "x86_64"
+            device_code: "x86_64"
           - manifest-repo: "https://github.com/LineageOS/android.git"
             manifest-branch: "cm-14.1"
-            android-version: "x86_64"
+            device_code: "x86_64"
           - manifest-repo: "https://github.com/LineageOS/android.git"
             manifest-branch: "cm-11.0"
-            android-version: "x86_64"
+            device_code: "x86_64"
     with:
       runner_image: ${{ matrix.runner_image }}
       manifest-repo: ${{ matrix.workflows_inputs.manifest-repo }}
       manifest-branch: ${{ matrix.workflows_inputs.manifest-branch }}
-      android-version: ${{ matrix.workflows_inputs.android-version }}
+      device_code: ${{ matrix.workflows_inputs.device_code }}
