--- a/.github/workflows/lineageos-dev.yml
+++ b/.github/workflows/lineageos-dev.yml
@@ -19,7 +19,7 @@ on:
         required: true
         default: "lineage-18.1"
         type: string
-      android-version:
+      device_code:
         description: "Android version"
         required: true
         default: "ginkgo"
@@ -43,7 +43,7 @@ on:
         description: "Manifest branch"
         required: true
         type: string
-      android-version:
+      device_code:
         description: "Android version"
         required: true
         type: string
@@ -52,7 +52,7 @@ on:
         type: string
         required: false
 
-run-name: ${{ inputs.manifest-repo || 'https://github.com/LineageOS/android.git' }} - ${{ inputs.manifest-branch || 'lineage-18.1' }} - ${{ inputs.android-version || 'ginkgo' }}
+run-name: ${{ inputs.manifest-repo || 'https://github.com/LineageOS/android.git' }} - ${{ inputs.manifest-branch || 'lineage-18.1' }} - ${{ inputs.device_code || 'ginkgo' }}
 
 env:
   custom_env: ${{ inputs.custom_env || '' }}
@@ -65,7 +65,7 @@ jobs:
       path_build: "/android/lineage"
       manifest-repo: ${{ inputs.manifest-repo || 'https://github.com/LineageOS/android.git' }}
       manifest-branch: ${{ inputs.manifest-branch || 'lineage-18.1' }}
-      android-version: ${{ inputs.android-version || 'ginkgo' }}
+      device_code: ${{ inputs.device_code || 'ginkgo' }}
     steps:
       - name: Set environment variable
         id: var
@@ -550,8 +550,8 @@ jobs:
 
           # echo "===== croot ====="
           # croot
-          # echo "===== brunch ${{ env.android-version }} ====="
-          # brunch ${{ env.android-version }}
+          # echo "===== brunch ${{ env.device_code }} ====="
+          # brunch ${{ env.device_code }}
 
           # ---------- mka ----------
           # - **`breakfast`**：LineageOS 的命令，用于设置构建环境，类似于 `lunch`。
@@ -598,19 +598,19 @@ jobs:
           set -e
 
           # 使用 lunch 设置构建环境
-          echo "===== lunch aosp_${{ env.android-version }}-eng ====="
-          lunch aosp_${{ env.android-version }}-eng
+          echo "===== lunch aosp_${{ env.device_code }}-eng ====="
+          lunch aosp_${{ env.device_code }}-eng
 
           # 使用 breakfast 设置构建环境
-          # echo "===== breakfast ${{ env.android-version }} ====="
-          # breakfast ${{ env.android-version }}
+          # echo "===== breakfast ${{ env.device_code }} ====="
+          # breakfast ${{ env.device_code }}
 
           # 使用 mka 构建特定目标
           mka recoveryimage
           mka iso_img
 
           # # 使用 brunch 设置环境并构建
-          # brunch ${{ env.android-version }} eng
+          # brunch ${{ env.device_code }} eng
 
           echo "Build completed"
 
