--- a/.github/workflows/lineageos-dev.yml
+++ b/.github/workflows/lineageos-dev.yml
@@ -9,6 +9,11 @@ on:
         type: string
         required: false
         default: "ubuntu-latest"
+      custom_env:
+        description: "key=value;key=value"
+        type: string
+        required: false
+        default: ""
       manifest-repo:
         description: "Manifest repository"
         required: true
@@ -24,17 +29,31 @@ on:
         required: true
         default: "ginkgo"
         type: string
-      custom_env:
-        description: "key=value;key=value"
-        type: string
+      lunch_code:
+        description: "lunch code"
         required: false
-        default: ""
+        default: "lineage_arm-userdebug"
+        type: string
+      breakfast_code:
+        description: "breakfast code"
+        required: false
+        default: "lineage_arm-userdebug"
+        type: string
+      brunch_code:
+        description: "brunch code"
+        required: false
+        default: "lineage_arm-userdebug"
+        type: string
   workflow_call:
     inputs:
       runner_image:
         description: "Runner Image"
         type: string
         required: true
+      custom_env:
+        description: "key=value;key=value"
+        type: string
+        required: false
       manifest-repo:
         description: "Manifest repository"
         type: string
@@ -47,10 +66,18 @@ on:
         description: "Android version"
         required: true
         type: string
-      custom_env:
-        description: "key=value;key=value"
-        type: string
+      lunch_code:
+        description: "lunch code"
         required: false
+        type: string
+      breakfast_code:
+        description: "breakfast code"
+        required: false
+        type: string
+      brunch_code:
+        description: "brunch code"
+        required: false
+        type: string
 
 run-name: ${{ inputs.manifest-repo || 'https://github.com/LineageOS/android.git' }} - ${{ inputs.manifest-branch || 'lineage-18.1' }} - ${{ inputs.device_code || 'ginkgo' }}
 
@@ -65,7 +92,7 @@ jobs:
       path_build: "/android/lineage"
       manifest-repo: ${{ inputs.manifest-repo || 'https://github.com/LineageOS/android.git' }}
       manifest-branch: ${{ inputs.manifest-branch || 'lineage-18.1' }}
-      device_code: ${{ inputs.device_code || 'ginkgo' }}
+      device_code: ${{ inputs.device_code }}
     steps:
       - name: Set environment variable
         id: var
@@ -550,8 +577,6 @@ jobs:
 
           # echo "===== croot ====="
           # croot
-          # echo "===== brunch ${{ env.device_code }} ====="
-          # brunch ${{ env.device_code }}
 
           # ---------- mka ----------
           # - **`breakfast`**：LineageOS 的命令，用于设置构建环境，类似于 `lunch`。
@@ -587,7 +612,7 @@ jobs:
           echo "===== source build/envsetup.sh ====="
           source build/envsetup.sh
 
-          echo "===== menu lunch/breakfast ====="
+          echo "===== menu: lunch/breakfast/brunch ====="
           set +e
           echo "----- lunch menu -----"
           lunch
@@ -598,19 +623,20 @@ jobs:
           set -e
 
           # 使用 lunch 设置构建环境
-          echo "===== lunch aosp_${{ env.device_code }}-eng ====="
-          lunch aosp_${{ env.device_code }}-eng
+          echo "===== lunch: ${{ inputs.lunch_code }} ====="
+          lunch ${{ inputs.lunch_code }}
 
           # 使用 breakfast 设置构建环境
-          # echo "===== breakfast ${{ env.device_code }} ====="
-          # breakfast ${{ env.device_code }}
+          # echo "===== breakfast: ${{ inputs.breakfast_code }} ====="
+          # breakfast ${{ inputs.breakfast_code }}
 
           # 使用 mka 构建特定目标
           mka recoveryimage
           mka iso_img
 
-          # # 使用 brunch 设置环境并构建
-          # brunch ${{ env.device_code }} eng
+          # 使用 brunch 设置环境并构建
+          # echo "===== brunch: ${{ inputs.brunch_code }} ====="
+          # brunch ${{ inputs.brunch_code }}
 
           echo "Build completed"
 
