--- a/.github/workflows/lineageos-dev.yml
+++ b/.github/workflows/lineageos-dev.yml
@@ -32,17 +32,17 @@ on:
       lunch_code:
         description: "lunch code"
         required: false
-        default: "lineage_arm-userdebug"
+        # default: "lineage_arm-userdebug"
         type: string
       breakfast_code:
         description: "breakfast code"
         required: false
-        default: "lineage_arm-userdebug"
+        # default: "lineage_arm-userdebug"
         type: string
       brunch_code:
         description: "brunch code"
         required: false
-        default: "lineage_arm-userdebug"
+        # default: "lineage_arm-userdebug"
         type: string
   workflow_call:
     inputs:
@@ -575,9 +575,6 @@ jobs:
           echo "Current working directory: $(pwd)"
           export PATH=~/bin:$PATH
 
-          # echo "===== croot ====="
-          # croot
-
           # ---------- mka ----------
           # - **`breakfast`**：LineageOS 的命令，用于设置构建环境，类似于 `lunch`。
           # - **`lunch`**：Android 的命令，用于设置构建环境。
@@ -622,22 +619,38 @@ jobs:
           brunch
           set -e
 
-          # 使用 lunch 设置构建环境
-          echo "===== lunch: ${{ inputs.lunch_code }} ====="
-          lunch ${{ inputs.lunch_code }}
-
-          # 使用 breakfast 设置构建环境
-          # echo "===== breakfast: ${{ inputs.breakfast_code }} ====="
-          # breakfast ${{ inputs.breakfast_code }}
-
-          # 使用 mka 构建特定目标
-          mka recoveryimage
-          mka iso_img
-
           # 使用 brunch 设置环境并构建
+          # echo "===== croot ====="
+          # croot
           # echo "===== brunch: ${{ inputs.brunch_code }} ====="
           # brunch ${{ inputs.brunch_code }}
 
+          if [ -n "${{ inputs.lunch_code }}" ]; then
+            # 使用 lunch 设置构建环境
+            echo "===== lunch: ${{ inputs.lunch_code }} ====="
+            lunch ${{ inputs.lunch_code }}
+            # 使用 mka 构建特定目标
+            mka recoveryimage
+            mka iso_img
+          elif [ -n "${{ inputs.breakfast_code }}" ]; then
+            # 使用 breakfast 设置构建环境
+            echo "===== breakfast: ${{ inputs.breakfast_code }} ====="
+            breakfast ${{ inputs.breakfast_code }}
+            # 使用 mka 构建特定目标
+            mka recoveryimage
+            mka iso_img
+          elif [ -n "${{ inputs.brunch_code }}" ]; then
+            # 使用 brunch 设置环境并构建
+            echo "===== croot ====="
+            croot
+            echo "===== brunch: ${{ inputs.brunch_code }} ====="
+            brunch ${{ inputs.brunch_code }}
+          else
+            echo "未提供有效的构建代码，退出。" >&2
+            exit 1
+          fi
+
+          df -Th
           echo "Build completed"
 
       - name: Upload OpenWrt to Release
