--- a/.github/workflows/call-build.yml
+++ b/.github/workflows/call-build.yml
@@ -53,3 +53,6 @@ jobs:
       manifest-repo: ${{ matrix.workflows_inputs.manifest-repo }}
       manifest-branch: ${{ matrix.workflows_inputs.manifest-branch }}
       device_code: ${{ matrix.workflows_inputs.device_code }}
+      lunch_code: ${{ matrix.workflows_inputs.lunch_code }}
+      breakfast_code: ${{ matrix.workflows_inputs.device_code || '' }}
+      brunch_code: ${{ matrix.workflows_inputs.device_code || '' }}
