--- a/.github/workflows/call-build.yml
+++ b/.github/workflows/call-build.yml
@@ -26,9 +26,17 @@ jobs:
             device_code: "ginkgo"
             lunch_code: "lineage_arm-userdebug"
           - manifest-repo: "https://github.com/LineageOS/android.git"
+            manifest-branch: "lineage-17.1"
+            device_code: "ginkgo"
+            brunch_code: "lineage_arm64-userdebug"
+          - manifest-repo: "https://github.com/LineageOS/android.git"
             manifest-branch: "lineage-18.1"
             device_code: "flame"
             lunch_code: "lineage_arm-userdebug"
+          - manifest-repo: "https://github.com/LineageOS/android.git"
+            manifest-branch: "lineage-18.1"
+            device_code: "flame"
+            brunch_code: "lineage_arm64-userdebug"
           # ========== x86_64 ==========
           # ---------- lineage-17.1 ----------
           - manifest-repo: "https://github.com/LineageOS/android.git"
@@ -44,15 +52,11 @@ jobs:
             manifest-branch: "cm-14.1"
             device_code: "x86_64"
             lunch_code: "aosp_x86_64-eng"
-          # ---------- lineage-11.0 ----------
-          - manifest-repo: "https://github.com/LineageOS/android.git"
-            manifest-branch: "cm-11.0"
-            device_code: "aosp_x86-eng"
     with:
       runner_image: ${{ matrix.runner_image }}
       manifest-repo: ${{ matrix.workflows_inputs.manifest-repo }}
       manifest-branch: ${{ matrix.workflows_inputs.manifest-branch }}
-      device_code: ${{ matrix.workflows_inputs.device_code }}
-      lunch_code: ${{ matrix.workflows_inputs.lunch_code }}
+      device_code: ${{ matrix.workflows_inputs.device_code || '' }}
+      lunch_code: ${{ matrix.workflows_inputs.lunch_code || '' }}
       breakfast_code: ${{ matrix.workflows_inputs.breakfast_code || '' }}
       brunch_code: ${{ matrix.workflows_inputs.brunch_code || '' }}
