--- a/.github/workflows/lineageos-dev.yml
+++ b/.github/workflows/lineageos-dev.yml
@@ -638,20 +638,24 @@ jobs:
             # 使用 lunch 设置构建环境
             echo "===== lunch: ${{ inputs.lunch_code }} ====="
             lunch ${{ inputs.lunch_code }}
+            # 使用 mka 编译内核 https://faint.day/zh/blog/build-lineageos-custom-kernel/
+            mka kernel
             # 使用 mka 构建特定目标
-            set +e
-            mka
-            set -e
+            # set +e
+            # mka
+            # set -e
             mka recoveryimage
             mka iso_img
           elif [ -n "${{ inputs.breakfast_code }}" ]; then
             # 使用 breakfast 设置构建环境
             echo "===== breakfast: ${{ inputs.breakfast_code }} ====="
             breakfast ${{ inputs.breakfast_code }}
+            # 使用 mka 编译内核 https://faint.day/zh/blog/build-lineageos-custom-kernel/
+            mka kernel
             # 使用 mka 构建特定目标
-            set +e
-            mka
-            set -e
+            # set +e
+            # mka
+            # set -e
             mka recoveryimage
             mka iso_img
           elif [ -n "${{ inputs.brunch_code }}" ]; then
